--- a/accounts/templates/movie_details.html
+++ b/accounts/templates/movie_details.html
@@ -3,7 +3,11 @@
 
 {% block content %}
     <div>
-        <img src="{{ movie_data.Poster }}" alt="{{ movie_data.Title }} Poster">
+        {% if movie_data.Poster != "N/A" %}
+            <img src="{{ movie_data.Poster }}" alt="{{ movie.Title }} Poster">
+        {% else %}
+            <img src="{% static 'img/placeholder_poster.webp'%}" alt="Not found {{ movie_Data.Title }} Poster">
+        {% endif %}
         <h2>{{ movie_data.Title }}</h2>
         <p><b>Runtime:</b> {{movie_data.Runtime}}.</p>
         <p><b>Released:</b> {{movie_data.Released}}.</p>
